Fix parent path